other-vpol/deny-secret-service-account-token-type/.chainsaw-test/policy-ready.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: deny-secret-service-account-token-type
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
    - reason: Failed
      status: "False"
    (conditions[?type == 'WebhookConfigured']):
    - message: Webhook configured.
      reason: Succeeded
      status: "True"
      type: WebhookConfigured
